Downgrade java version to version 11. Closes #59.